--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Clicky Game",
-  "name": "Clicky Game",
+  "short_name": "Pokemans Game",
+  "name": "Pokemans Game",
   "icons": [
     {
       "src": "favicon.ico",
